[gd_scene load_steps=14 format=3 uid="uid://bqjbtsu1jcben"]

[ext_resource type="Script" path="res://src/UXUI/OptionsMenu.gd" id="1_apjq0"]
[ext_resource type="PackedScene" uid="uid://cy86asgwodbdp" path="res://src/UXUI/InputButton.tscn" id="2_ryc7h"]
[ext_resource type="FontFile" uid="uid://dcivfl3rw1qcn" path="res://assets/font/FogSans-Re46.otf" id="3_3afyl"]
[ext_resource type="Texture2D" uid="uid://dph2sy421r3n4" path="res://assets/textures/UXUI/Button1.png" id="3_tx8w0"]
[ext_resource type="Texture2D" uid="uid://nbbnhvq7sqq7" path="res://assets/textures/UXUI/Button.png" id="3_vuyd1"]
[ext_resource type="PackedScene" uid="uid://mea1an3v6qag" path="res://src/UXUI/OptionsSelecter.tscn" id="4_i3pvx"]
[ext_resource type="StyleBox" uid="uid://dt373x02xlmyb" path="res://materials/UXUI/Button1Normal.tres" id="5_t0t4t"]
[ext_resource type="StyleBox" uid="uid://bcb5qj0pcogko" path="res://materials/UXUI/Button1Hover.tres" id="6_8wix5"]
[ext_resource type="StyleBox" uid="uid://dj8t756h4bqjd" path="res://materials/UXUI/Button2Normal.tres" id="6_mlg4q"]
[ext_resource type="StyleBox" uid="uid://c6l0ot5dy2fij" path="res://materials/UXUI/Button2Hover.tres" id="7_nqmxo"]
[ext_resource type="StyleBox" uid="uid://dh2vqu8bmbcwm" path="res://materials/UXUI/Button1Pressed.tres" id="7_tavq3"]
[ext_resource type="StyleBox" uid="uid://1ulot5p4who5" path="res://materials/UXUI/Button2Pressed.tres" id="8_kbumr"]
[ext_resource type="StyleBox" uid="uid://bhbf6r4t6m65f" path="res://materials/UXUI/ButtonFocus.tres" id="8_udpk8"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_apjq0")

[node name="Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="TextureRect" parent="Menu"]
modulate = Color(0.0901961, 0.0901961, 0.0901961, 1)
layout_mode = 0
offset_left = 1416.0
offset_top = 456.0
offset_right = 2016.0
offset_bottom = 756.0
scale = Vector2(0.44, 0.266667)
texture = ExtResource("3_vuyd1")

[node name="Button2" type="TextureRect" parent="Menu"]
modulate = Color(0.0901961, 0.0901961, 0.0901961, 1)
layout_mode = 0
offset_left = 1416.0
offset_top = 656.0
offset_right = 2016.0
offset_bottom = 956.0
scale = Vector2(0.44, 0.266667)
texture = ExtResource("3_vuyd1")

[node name="Button4" type="TextureRect" parent="Menu"]
modulate = Color(0.0901961, 0.0901961, 0.0901961, 1)
layout_mode = 0
offset_left = 1400.0
offset_top = 560.0
offset_right = 2000.0
offset_bottom = 860.0
scale = Vector2(0.44, 0.266667)
texture = ExtResource("3_tx8w0")

[node name="Button5" type="TextureRect" parent="Menu"]
modulate = Color(0.0901961, 0.0901961, 0.0901961, 1)
layout_mode = 0
offset_left = 1400.0
offset_top = 760.0
offset_right = 2000.0
offset_bottom = 1060.0
scale = Vector2(0.44, 0.266667)
texture = ExtResource("3_tx8w0")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.433
anchor_top = 0.296
anchor_right = 0.604
anchor_bottom = 0.652
offset_left = 576.64
offset_top = 128.32
offset_right = 512.32
offset_bottom = 127.84
theme_override_constants/separation = 18

[node name="VideoButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("5_t0t4t")
theme_override_styles/hover = ExtResource("6_8wix5")
theme_override_styles/pressed = ExtResource("7_tavq3")
theme_override_styles/focus = ExtResource("8_udpk8")
text = "Video"

[node name="AudioButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("6_mlg4q")
theme_override_styles/hover = ExtResource("7_nqmxo")
theme_override_styles/pressed = ExtResource("8_kbumr")
theme_override_styles/focus = ExtResource("8_udpk8")
text = "Audio"

[node name="ControlsButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("5_t0t4t")
theme_override_styles/hover = ExtResource("6_8wix5")
theme_override_styles/pressed = ExtResource("7_tavq3")
theme_override_styles/focus = ExtResource("8_udpk8")
text = "Controls"

[node name="ExitButton" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("6_mlg4q")
theme_override_styles/hover = ExtResource("7_nqmxo")
theme_override_styles/pressed = ExtResource("8_kbumr")
theme_override_styles/focus = ExtResource("8_udpk8")
text = "Exit"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Video"]
layout_mode = 2
offset_left = 784.0
offset_top = 320.0
offset_right = 997.0
offset_bottom = 362.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Resolution"

[node name="Label2" type="Label" parent="Video"]
layout_mode = 2
offset_left = 784.0
offset_top = 400.0
offset_right = 997.0
offset_bottom = 442.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Screen"

[node name="Label3" type="Label" parent="Video"]
layout_mode = 2
offset_left = 784.0
offset_top = 480.0
offset_right = 1018.0
offset_bottom = 522.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Colour blindness"

[node name="Label4" type="Label" parent="Video"]
layout_mode = 0
offset_left = 784.0
offset_top = 560.0
offset_right = 867.0
offset_bottom = 602.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Vsync"

[node name="Label5" type="Label" parent="Video"]
layout_mode = 0
offset_left = 784.0
offset_top = 624.0
offset_right = 970.0
offset_bottom = 666.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Screen shake"

[node name="Resolution" parent="Video" instance=ExtResource("4_i3pvx")]
offset_left = 1056.0
offset_top = 304.0
offset_right = 1376.0
offset_bottom = 368.0
list = Array[StringName]([&"1280x720", &"1920x1080"])

[node name="Screen" parent="Video" instance=ExtResource("4_i3pvx")]
offset_left = 1056.0
offset_top = 384.0
offset_right = 1376.0
offset_bottom = 448.0
list = Array[StringName]([&"Fullscreen", &"Fullscreen Borderless", &"Windowed"])

[node name="ColourBlind" parent="Video" instance=ExtResource("4_i3pvx")]
offset_left = 1056.0
offset_top = 464.0
offset_right = 1376.0
offset_bottom = 528.0
list = Array[StringName]([&"Default", &"Protanopia", &"Deuteranopia", &"Tritanopia", &"Achromatopsia"])

[node name="VsyncCheckBox" type="CheckBox" parent="Video"]
layout_mode = 2
offset_left = 1072.0
offset_top = 576.0
offset_right = 1096.0
offset_bottom = 600.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 15

[node name="ScreenShakeCheckBox" type="CheckBox" parent="Video"]
layout_mode = 2
offset_left = 1072.0
offset_top = 640.0
offset_right = 1096.0
offset_bottom = 664.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 15

[node name="Audio" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Audio"]
layout_mode = 2
offset_left = 608.0
offset_top = 528.0
offset_right = 802.0
offset_bottom = 570.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Master volime"

[node name="Label2" type="Label" parent="Audio"]
layout_mode = 2
offset_left = 608.0
offset_top = 568.0
offset_right = 797.0
offset_bottom = 610.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Music volume"

[node name="Label3" type="Label" parent="Audio"]
layout_mode = 2
offset_left = 608.0
offset_top = 608.0
offset_right = 769.0
offset_bottom = 650.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "SFX volume"

[node name="MasterSlider" type="HSlider" parent="Audio"]
layout_mode = 2
offset_left = 832.0
offset_top = 528.0
offset_right = 1200.0
offset_bottom = 568.0
min_value = -50.0
max_value = 50.0

[node name="MusicSlider" type="HSlider" parent="Audio"]
layout_mode = 2
offset_left = 832.0
offset_top = 568.0
offset_right = 1200.0
offset_bottom = 600.0
min_value = -50.0
max_value = 50.0

[node name="SFXSlider" type="HSlider" parent="Audio"]
layout_mode = 2
offset_left = 832.0
offset_top = 600.0
offset_right = 1200.0
offset_bottom = 640.0
min_value = -50.0
max_value = 50.0

[node name="MasterPer" type="Label" parent="Audio"]
layout_mode = 0
offset_left = 1224.0
offset_top = 536.0
offset_right = 1279.0
offset_bottom = 568.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20
text = "####"

[node name="MusicPer" type="Label" parent="Audio"]
layout_mode = 0
offset_left = 1224.0
offset_top = 568.0
offset_right = 1279.0
offset_bottom = 600.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20
text = "####"

[node name="SFXPer" type="Label" parent="Audio"]
layout_mode = 0
offset_left = 1224.0
offset_top = 604.0
offset_right = 1279.0
offset_bottom = 632.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20
text = "####"

[node name="Controls" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Controls"]
layout_mode = 0
offset_left = 1072.0
offset_top = 376.0
offset_right = 1112.0
offset_bottom = 667.0
theme_override_constants/separation = 15
alignment = 1

[node name="InputButton" parent="Controls/VBoxContainer" instance=ExtResource("2_ryc7h")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20
text = "#"
action = "move_forward"
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20

[node name="InputButton2" parent="Controls/VBoxContainer" instance=ExtResource("2_ryc7h")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20
text = "#"
action = "move_back"
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20

[node name="InputButton3" parent="Controls/VBoxContainer" instance=ExtResource("2_ryc7h")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20
text = "#"
action = "move_left"
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20

[node name="InputButton4" parent="Controls/VBoxContainer" instance=ExtResource("2_ryc7h")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20
text = "#"
action = "move_right"
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20

[node name="InputButton5" parent="Controls/VBoxContainer" instance=ExtResource("2_ryc7h")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20
text = "#"
action = "interact"
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20

[node name="InputButton6" parent="Controls/VBoxContainer" instance=ExtResource("2_ryc7h")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20
text = "#"
action = "escape"
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 20

[node name="Label" type="Label" parent="Controls"]
layout_mode = 2
offset_left = 872.0
offset_top = 376.0
offset_right = 949.0
offset_bottom = 404.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Forward"

[node name="Label2" type="Label" parent="Controls"]
layout_mode = 2
offset_left = 872.0
offset_top = 424.0
offset_right = 963.0
offset_bottom = 456.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Backward"

[node name="Label3" type="Label" parent="Controls"]
layout_mode = 2
offset_left = 872.0
offset_top = 472.0
offset_right = 907.0
offset_bottom = 500.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Left"

[node name="Label4" type="Label" parent="Controls"]
layout_mode = 2
offset_left = 872.0
offset_top = 520.0
offset_right = 921.0
offset_bottom = 548.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Right"

[node name="Label5" type="Label" parent="Controls"]
layout_mode = 2
offset_left = 872.0
offset_top = 568.0
offset_right = 948.0
offset_bottom = 596.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Interact"

[node name="Label6" type="Label" parent="Controls"]
layout_mode = 0
offset_left = 872.0
offset_top = 616.0
offset_right = 938.0
offset_bottom = 644.0
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
text = "Escape"

[node name="Button3" type="TextureRect" parent="."]
visible = false
modulate = Color(0.0901961, 0.0901961, 0.0901961, 1)
layout_mode = 0
offset_left = 872.0
offset_top = 712.0
offset_right = 1472.0
offset_bottom = 1012.0
scale = Vector2(0.44, 0.266667)
texture = ExtResource("3_vuyd1")

[node name="BackButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467
anchor_top = 0.689
anchor_right = 0.567
anchor_bottom = 0.741
offset_left = -24.64
offset_top = -40.1199
offset_right = 39.3601
offset_bottom = -13.7199
theme_override_fonts/font = ExtResource("3_3afyl")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("5_t0t4t")
theme_override_styles/hover = ExtResource("6_8wix5")
theme_override_styles/pressed = ExtResource("7_tavq3")
theme_override_styles/focus = ExtResource("8_udpk8")
text = "Exit"

[connection signal="pressed" from="Menu/VBoxContainer/VideoButton" to="." method="_on_video_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Video/VsyncCheckBox" to="." method="_on_vsync_check_box_pressed"]
[connection signal="pressed" from="Video/ScreenShakeCheckBox" to="." method="_on_screen_shake_check_box_pressed"]
[connection signal="value_changed" from="Audio/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Audio/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Audio/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
